<resources>
    <string name="app_name">SignUpForm</string>

    <string name="username_heading">Username: </string>
    <string name="username_hint">Please enter your username</string>
    <string name="password_heading">Password: </string>
    <string name="password_hint">Please enter your password</string>
    <string name="confirm_password_heading">Confirm Password: </string>
    <string name="confirm_password_hint">Please confirm your password</string>
    <string name="submit_button">Submit</string>
    <string name="action_settings">Action Settings</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="welcome_format">Welcome %s</string>
</resources>
