<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/username_heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/username_heading"
            android:textAllCaps="true" />

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="75"
            android:gravity="center_horizontal"
            android:hint="@string/username_hint"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_field">

        <TextView
            android:id="@+id/password_heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/password_heading"
            android:textAllCaps="true" />

        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="75"
            android:gravity="center_horizontal"
            android:hint="@string/password_hint"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirm_password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_field">

        <TextView
            android:id="@+id/confirm_password_heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/confirm_password_heading"
            android:textAllCaps="true" />

        <EditText
            android:id="@+id/confirm_password"
            android:inputType="textPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="75"
            android:gravity="center_horizontal"
            android:hint="@string/confirm_password_hint"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_password_field"
        android:layout_alignParentRight="true"
        android:text="@string/submit_button"
        android:textSize="15sp" />

</RelativeLayout>
